--- a/public/initialize.html
+++ b/public/initialize.html
@@ -2,6 +2,8 @@
 <head>
 	<script type="text/javascript" src="jquery-3.1.0.min.js"></script>
 	<script type = "text/javascript" src = "initialize.js"></script>
+	<script type="text/javascript" src="../libs/firebase.js"></script>
+
 	<style>
 		#info_blocked {
 			display: none;
